Cleanup dependencies and working on non-Erik computer :-)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,11 @@
          xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:applicationContext.xml</param-value>
+  </context-param>
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
@@ -59,18 +64,6 @@
     <servlet-mapping>
         <servlet-name>jUnitHostImpl</servlet-name>
         <url-pattern>/law/junithost/*</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>EventService</servlet-name>
-        <servlet-class>
-            de.novanic.eventservice.service.EventServiceImpl
-        </servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>EventService</servlet-name>
-        <url-pattern>/law/gwteventservice</url-pattern>
     </servlet-mapping>
 
 </web-app>
