Added functions for bookmarks, springsecurity, users, userroles, legalresearch functionality

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,10 +7,13 @@
          xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:applicationContext.xml</param-value>
-  </context-param>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            classpath:applicationContext.xml
+            classpath:applicationContext-security.xml
+        </param-value>
+    </context-param>
 
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -18,6 +21,10 @@
 
     <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    </listener>
+
+    <listener>
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
 
     <!-- Front Controller for all GWT Spring based servlets -->
@@ -45,7 +52,8 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-    <!-- Don't forget to declare a gwt-servlet.xml -->
+    <!-- Don't forget to declare a gwt-servlet.xml
+    TODO: remove -->
     <servlet-mapping>
         <servlet-name>gwt</servlet-name>
         <url-pattern>law/rpc/*</url-pattern>
@@ -61,10 +69,38 @@
         <servlet-name>jUnitHostImpl</servlet-name>
         <servlet-class>com.google.gwt.junit.server.JUnitHostImpl</servlet-class>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>jUnitHostImpl</servlet-name>
         <url-pattern>/law/junithost/*</url-pattern>
     </servlet-mapping>
 
+
+    <servlet>
+        <servlet-name>mvc-dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>mvc-dispatcher</servlet-name>
+        <url-pattern>*.do</url-pattern>
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
+
+    <error-page>
+        <error-code>403</error-code>
+        <location>/notallowed.do</location>
+    </error-page>
 </web-app>
 
