--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
         <!-- GWT needs at least java 1.5 -->
         <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>3.1.1.RELEASE</spring.version>
+        <spring.version>3.2.0.M1</spring.version>
+        <!--  3.1.1.RELEASE -->
         <aspectj.version>1.6.12</aspectj.version>
         <neo4j-version>1.6.M01</neo4j-version>
 
@@ -98,7 +99,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>${spring.version}</version>
+            <version> ${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -142,6 +143,7 @@
             <artifactId>spring-data-neo4j</artifactId>
             <version>2.0.0.RELEASE</version>
         </dependency>
+
 
         <dependency>
             <groupId>javax.validation</groupId>
@@ -189,6 +191,11 @@
             <groupId>javax.annotation</groupId>
             <artifactId>jsr250-api</artifactId>
             <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.ehcache-spring-annotations</groupId>
+            <artifactId>ehcache-spring-annotations</artifactId>
+            <version>1.2.0</version>
         </dependency>
 
     </dependencies>
