--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -57,5 +57,5 @@ log4j.appender.H.MaxFileSize = 100KB
 log4j.appender.H.Append = false
 log4j.appender.H.layout = org.apache.log4j.HTMLLayout
 
-log4j.logger.org.springframework.security=DEBUG
+#log4j.logger.org.springframework.security=DEBUG
 
