--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,14 @@
 
     <properties>
         <!-- Convenience property to set the GWT version -->
-        <gwtVersion>2.4.0</gwtVersion>
+        <gwtVersion>2.5.0-rc1</gwtVersion>
         <!-- GWT needs at least java 1.5 -->
         <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>3.2.0.M1</spring.version>
         <!--  3.1.1.RELEASE -->
         <aspectj.version>1.6.12</aspectj.version>
-        <neo4j-version>1.6.M01</neo4j-version>
+        <neo4j-version>1.6</neo4j-version>
 
     </properties>
 
@@ -99,7 +99,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version> ${spring.version}</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -170,17 +170,17 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version> 3.1.0.RC3</version>
+            <version>3.1.0.RC3</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version> 3.1.0.RC3</version>
+            <version>3.1.0.RC3</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version> 3.1.0.RC3</version>
+            <version>3.1.0.RC3</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -229,7 +229,7 @@
                     <dependency>
                         <groupId>com.google.web.bindery</groupId>
                         <artifactId>requestfactory-apt</artifactId>
-                        <version>${gwtVersion}</version>
+                        <version>2.4.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -261,7 +261,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>2.4.0</version>
+                <version>${gwtVersion}</version>
                 <executions>
                     <execution>
                         <goals>
