Switched from neo4j to mysql... hope the branching worked :)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
         <param-value>
             classpath:applicationContext.xml
             classpath:applicationContext-security.xml
+            classpath:dataSource.xml
         </param-value>
     </context-param>
 
